syntax = "proto3";
package protocol;

enum RequestKey
{
  CreatTopic       = 0;       //普通
  GetPublisherPartition       = 1;         //聊天场景
  Publish     = 2;         //好友场景
  GetConsumerPartition       = 3;        //房间中
  Subscribe = 4;
};

// this is a comment
message Request {
  RequestKey key = 1;
  string Topic = 2;
  string Partition = 3;
  string GroupName = 4;
  int32 PartitionNum = 5;
  Message msg = 6;
}

message Message{
  int32 priority = 1;
  bytes msg = 2;
}